--- a/package.json
+++ b/package.json
@@ -192,6 +192,20 @@
     "debounce": "^1.2.0",
     "minimatch": "^3.0.4",
     "mobx": "^5.14.2",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "@types/vscode": "^1.55.0",
+		"@types/glob": "^7.1.3",
+		"@types/mocha": "^8.0.4",
+		"@types/node": "^12.11.7",
+		"eslint": "^7.19.0",
+		"@typescript-eslint/eslint-plugin": "^4.14.1",
+		"@typescript-eslint/parser": "^4.14.1",
+		"glob": "^7.1.6",
+		"mocha": "^8.2.1",
+		"typescript": "^4.1.3",
+		"vscode-test": "^1.5.0",
+		"ts-loader": "^8.0.14",
+		"webpack": "^5.19.0",
+		"webpack-cli": "^4.4.0"
   }
 }
